--- a/app/views/cats/_form.html.erb
+++ b/app/views/cats/_form.html.erb
@@ -1,19 +1,24 @@
 <%= flash[:errors] && flash[:errors].to_json %>
 <% action_url = @cat.persisted? ? "cats/#{@cat.id}/edit" : "/cats"%>
 
-<form action=<%= action_url %> method="POST">
+<form action="<%= action_url %>" method="POST">
   <% if @cat.persisted? %>
     <input type="hidden" name="_method", method="PATCH">
   <% end %>
+  
   <label for="cat_name">Name</label>
-  <input type="text" name="cat[name]" id="cat_name" value=<%= @cat.name %>>
+  <input type="text" name="cat[name]" id="cat_name" value="<%= @cat.name %>">
   <br>
   
   <% Cat::SEX.each do |sex| %>
     <label for="cat_sex">
       <%= sex == "M" ? "Male" : "Female"%>
     </label>
-    <input type="radio" name="cat[sex]" value=<%= sex %> <%= "checked" if @cat.sex == sex %> id="cat_sex">
+    <input type="radio"
+           name="cat[sex]"
+           value="<%= sex %>"
+           <%= "checked" if @cat.sex == sex %>
+           id="cat_sex">
   <% end %>
   <br>
  
@@ -21,7 +26,7 @@
   <select name="cat[color]" id="cat_color">
     <option></option>
     <% Cat::COLOR.each do |color| %>
-      <option value=<%= color %> <%= "selected" if @cat.color == color %>><%= color %></option>
+      <option value="<%= color %>" <%= "selected" if @cat.color == color %>><%= color %></option>
     <% end %>  
   </select>
   <br>
@@ -30,13 +35,13 @@
   <% today = Date.today%>
   <input type="date"
          name="cat[birth_date]"
-         value=<%= @cat.birth_date %>
+         value="<%= @cat.birth_date %>"
          max=<%= "#{today.year}-#{today.month}-#{today.day}" %> id="cat_birth_date" >
   <br>
   
   <label for="cat_description">Description</label>
-  <textarea name="cat[description]" id="cat_description" 
-  ><%= @cat.description %></textarea>
+  <textarea name="cat[description]"
+            id="cat_description"><%= @cat.description %></textarea>
   <br>
   
   <input type="submit" value="Create a cat">
