--- a/app/views/cats/new.html.erb
+++ b/app/views/cats/new.html.erb
@@ -1,5 +1,7 @@
-<h1>Create a new cat!</h1>
 
+
+<div class="col-md-4 col-md-offset-4">
+<h1 class="text-center">Create a new cat!</h1>
 <%= render "form" %>
 
-<%= link_to "Back to all cats!", cats_url %>
+<div>
