--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,12 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<nav class="navbar navbar-default" role="navigation">
+  <a class="navbar-brand" href= "<%= root_url %>">99 Cats</a>
+</nav>
+<div class="container">
 <%= yield %>
+</div>
 
 </body>
 </html>
