--- a/app/views/cat_rental_requests/new.html.erb
+++ b/app/views/cat_rental_requests/new.html.erb
@@ -1,9 +1,13 @@
-<h1>Make a request!</h1>
+
+<div class="col-md-4 col-md-offset-4">
+<h1 class="text-center">Make a request!</h1>
 
 <%= flash[:errors] && flash[:errors].to_json %>
-<form action="/cat_rental_requests" method="POST">
+
+
+<form action="<%= cat_rental_requests_url %>" method="POST">
   <label for="cat_rental_request_cat_id">Cat</label>
-  <select id="cat_rental_request_cat_id" name="cat_rental_request[cat_id]">
+  <select id="cat_rental_request_cat_id" name="cat_rental_request[cat_id]" class="form-control">
     <option></option>
     <% @cats.each do |cat| %>
       <option value="<%= cat.id %>"
@@ -18,8 +22,9 @@
   <input type="date"
          name="cat_rental_request[start_date]"
          value="<%= @cat_rental_request.start_date %>"
-         min=<%= "#{today.year}-#{today.month}-#{today.day}" %>
-         id="cat_rental_request_start_date">
+         min='<%= "#{today.year}-#{today.month}-#{today.day}" %>'
+         id="cat_rental_request_start_date"
+         class="form-control" >
   <br>
   
   <label for="cat_rental_request_end_date">End Date</label>
@@ -27,8 +32,11 @@
   <input type="date"
          name="cat_rental_request[end_date]"
          value="<%= @cat_rental_request.end_date %>"
-         min=<%= "#{today.year}-#{today.month}-#{today.day}" %> id="cat_rental_request_end_date" >
+         min='<%= "#{today.year}-#{today.month}-#{today.day}" %>' 
+         id="cat_rental_request_end_date" 
+         class="form-control">
   <br>
   
-  <input type="submit" value="Make the request!">
+  <button type="submit" class="btn btn-primary btn-lg col-md-offset-3">Make the request!</button>
 </form>
+</div>
