--- a/app/views/cats/edit.html.erb
+++ b/app/views/cats/edit.html.erb
@@ -1,5 +1,5 @@
-<h1>Edit a cat!</h1>
+<div class="col-md-4 col-md-offset-4">
+<h1 class="text-center">Edit a cat!</h1>
 
 <%= render "form" %>
-
-<%=link_to "back to cat!", cat_url(@cat) %>
+</div>
