--- a/app/views/cats/index.html.erb
+++ b/app/views/cats/index.html.erb
@@ -1,10 +1,11 @@
-<h1>ALL CATS</h1>
+<div class="col-md-4 col-md-offset-4">
+<h1 class="text-center">All Cats</h1>
 
-<ul>
+<div class="list-group">
   <% @cats.each do |cat| %>
-    <li><%= link_to cat.name, cat_url(cat) %></li>
-    <%= button_to "Delete", cat_url(cat), method: :delete %>
+    <%= link_to cat.name, cat_url(cat), class: "list-group-item" %>
   <% end %>
-</ul>
+</div>
 
-<%= link_to "Create a cat!", new_cat_url %>
+<%= link_to "Create a cat!", new_cat_url, class: "btn btn-large btn-primary col-md-offset-4"%>
+</div>
