minor css changes

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -35,3 +35,11 @@ div.table_name{
 span.request{
   float: right;
 }
+table {
+    table-layout: fixed;
+}
+
+.navbar-default .navbar-brand {
+    color: white;
+    font-size: 25px;
+}
