--- a/app/views/cats/_form.html.erb
+++ b/app/views/cats/_form.html.erb
@@ -1,41 +1,46 @@
-<%= render 'shared/error.html.erb' %>
+
 <% action_url = @cat.persisted? ? "cats/#{@cat.id}/edit" : "/cats"%>
 
 <form action="<%= action_url %>" method="POST" role="form">
+  <%= render 'shared/error.html.erb' %>
+
   <% if @cat.persisted? %>
     <input type="hidden" name="_method", method="PATCH">
   <% end %>
+
   <div class="form-group">
-  <label for="cat_name">Name</label>
-  <input type="text" 
-        name="cat[name]" 
-        id="cat_name" 
-        value="<%= @cat.name %>"
-        class="form-control"
-        placeholder="Name">
-  <div>
+    <label for="cat_name">Name</label>
+    <input type="text" 
+          name="cat[name]" 
+          id="cat_name" 
+          value="<%= @cat.name %>"
+          class="form-control"
+          placeholder="Name">
+  </div>
     
    <fieldset class="sex-fieldset"> 
-   <legend class="sex-field">Sex</legend>
-        
-  <div class="radio form-control">
- 
-  <% Cat::SEX.each do |sex| %>
-    <label for="cat_sex">
-    <input type="radio"
-           name="cat[sex]"
-           value="<%= sex %>"
-           <%= "checked" if @cat.sex == sex %>
-           id="cat_sex">
-      <%= sex == "M" ? "Male" : "Female"%>
-    </label>
-  <% end %>
-</div>
-</fieldset>
+     <legend class="sex-field">Sex</legend>
+          
+    <div class="radio form-control">
+   
+      <% Cat::SEX.each do |sex| %>
+        <label for="cat_sex">
+        <input type="radio"
+               name="cat[sex]"
+               value="<%= sex %>"
+               <%= "checked" if @cat.sex == sex %>
+               id="cat_sex">
+          <%= sex == "M" ? "Male" : "Female"%>
+        </label>
+      <% end %>
+
+    </div>
+  </fieldset>
  
   <label for="cat_color">Color</label>
   <select name="cat[color]" id="cat_color" class="form-control">
     <option></option>
+
     <% Cat::COLOR.each do |color| %>
       <option 
         value="<%= color %>" 
@@ -43,8 +48,8 @@
         <%= color %>
       </option>
     <% end %>  
+
   </select>
-  <br>
   
   <label for="cat_birth_date">Birthdate</label>
   <% today = Date.today%>
@@ -54,14 +59,16 @@
          max="<%= "#{today.year}-#{today.month}-#{today.day}"%>"
          class="form-control"
          id="cat_birth_date" >
-  <br>
   
   <label for="cat_description">Description</label>
   <textarea name="cat[description]"
             id="cat_description"
             class="form-control"
-            placeholder="Enter description"><%= @cat.description %></textarea>
-  <br>
+            placeholder="Enter description"><%= @cat.description %>
+  </textarea>
   
-  <button type="submit" class="btn btn-primary btn-lg col-md-offset-4">Create the cat!</button>
+  <button type="submit" 
+          class="btn btn-primary btn-lg col-md-offset-4">
+          Create the cat!
+  </button>
 </form>
