--- a/app/views/cats/show.html.erb
+++ b/app/views/cats/show.html.erb
@@ -1,17 +1,28 @@
 <h1><%= @cat.name %></h1>
-<form action="<%= cat_url(@cat) %> " class="button_to" method="post">
+
+<form action="<%= cat_url(@cat) %> " 
+      class="button_to" 
+      method="post">
+
   <div>
     <input name="_method" type="hidden" value="delete">
-    <button type="submit" class="btn btn-default btn-xs"><span class="glyphicon glyphicon-remove"></span> Delete</button>
+    <button type="submit" 
+            class="btn btn-default btn-xs">
+            <span class="glyphicon glyphicon-remove"></span>
+             Delete
+    </button>
     
-    <a href="<%= edit_cat_url(@cat) %>" class="btn btn-default btn-xs"><span class="glyphicon glyphicon-wrench"></span> Edit</a>
-    
+    <a href="<%= edit_cat_url(@cat) %>" 
+      class="btn btn-default btn-xs">
+      <span class="glyphicon glyphicon-wrench"></span> 
+      Edit
+    </a>
   </div>
 </form>
+
 <hr>
 
 <div class="table_name">Cat Info</div>
-
 
 <table class="table">
   <thead>
@@ -33,8 +44,13 @@
 </table>
 
 <div class="table_name">Rental Requests
-
-<span class="request"><a href="<%= new_cat_rental_request_url %>" class="btn btn-default btn-xs"><span class="glyphicon glyphicon-plus"></span> New rental request</a></span>
+  <span class="request">
+    <a href="<%= new_cat_rental_request_url %>" 
+       class="btn btn-default btn-xs">
+       <span class="glyphicon glyphicon-plus"></span>
+        New rental request
+    </a>
+  </span>
 </div>
 
 
@@ -49,11 +65,14 @@
   </thead>
   
   <% @requests.each do |request|%>
+
   <tr>
     <td ><%= request.start_date %></td>
     <td><%= request.end_date %></td>
     <td><%= request.status %></td>
+
     <% if request.pending? %>
+
       <td>
         <a href="<%= cat_rental_request_approve_url(request) %>" 
           class="btn btn-default btn-xs">
@@ -69,22 +88,27 @@
         </a>
         </td>
     <% else %>
-      <td></td>
-      <td></td>
-    <% end %>
-    <td>
 
-             
-    <form action="<%= cat_rental_request_url(request) %> " class="button_to" method="post">
+      <td></td>
+      <td></td>
+
+    <% end %>
+    <td>     
+    <form action="<%= cat_rental_request_url(request) %> " 
+          class="button_to" 
+          method="post">
       <div>
         <input name="_method" type="hidden" value="delete">
-        <button type="submit" class="btn btn-default btn-xs"><span class="glyphicon glyphicon-trash"></span> Delete Request</button>
+        <button type="submit" class="btn btn-default btn-xs">
+          <span class="glyphicon glyphicon-trash"></span>
+           Delete Request
+        </button>
       </div>
-    </form>         
-             
-             
+    </form>               
     </td>
   </tr>
+
   <% end %>
+  
 </table>
 
