--- a/app/views/cat_rental_requests/new.html.erb
+++ b/app/views/cat_rental_requests/new.html.erb
@@ -7,12 +7,19 @@
 
 <form action="<%= cat_rental_requests_url %>" method="POST">
   <label for="cat_rental_request_cat_id">Cat</label>
-  <select id="cat_rental_request_cat_id" name="cat_rental_request[cat_id]" class="form-control">
+
+      <input type="hidden"
+             name="authenticity_token"
+             value="<%= form_authenticity_token %>">
+  <select id="cat_rental_request_cat_id" 
+          name="cat_rental_request[cat_id]" 
+          class="form-control">
     <option></option>
     <% @cats.each do |cat| %>
-      <option value="<%= cat.id %>"
-        <%= "selected" if @cat_rental_request.cat_id == cat.id %>
-        ><%= cat.name %></option>
+      <option 
+              value="<%= cat.id %>"
+              <%= "selected" if @cat_rental_request.cat_id == cat.id %>>
+        <%= cat.name %></option>
     <% end %>
   </select>
   <br>
