--- a/app/views/cats/_form.html.erb
+++ b/app/views/cats/_form.html.erb
@@ -3,7 +3,9 @@
 
 <form action="<%= action_url %>" method="POST" role="form">
   <%= render 'shared/error.html.erb' %>
-
+  <input type="hidden"
+         name="authenticity_token"
+         value="<%= form_authenticity_token %>">
   <% if @cat.persisted? %>
     <input type="hidden" name="_method", method="PATCH">
   <% end %>
