--- a/app/views/cats/request_cats.html.erb
+++ b/app/views/cats/request_cats.html.erb
@@ -1,10 +1,10 @@
 <div class="col-md-4 col-md-offset-4">
 
-	<h1 class="text-center">All Your Cats</h1>
+	<h1 class="text-center">Requestable cats</h1>
 
 	<div class="list-group" style="display:inline;">
 
-	  <% @your_cats.each do |cat| %>
+	  <% @other_cats.each do |cat| %>
 	    <%= link_to cat.name, cat_url(cat), class: "list-group-item" %>
 	  <% end %>
 
