--- a/app/views/cats/index.html.erb
+++ b/app/views/cats/index.html.erb
@@ -5,7 +5,9 @@
 	<div class="list-group" style="display:inline;">
 
 	  <% @your_cats.each do |cat| %>
-	    <%= link_to cat.name, cat_url(cat), class: "list-group-item" %>
+	  	<a href="<%= cat_url(cat) %>" class="list-group-item" >
+	  		<%= cat.name %>
+	  	</a>
 	  <% end %>
 
 	</div>
