--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
   <ul class="nav navbar-nav navbar-right">
     <% if current_user.nil? %>
       <li><a href="<%= new_session_url %>">Sign in!</a></li>
+      <li><a href="<%= new_user_url %>">Sign up!</a></li>
     <% else %>
       <li><a href="/cats/requests_cats ">View requestable cats</a></li>
       <li><a href="<%= cats_url %>">View your cats</a></li>
