--- a/app/views/cats/show.html.erb
+++ b/app/views/cats/show.html.erb
@@ -1,11 +1,17 @@
 <h1><%= @cat.name %></h1>
-
+<% if current_user.id == @cat.user_id %>
 <form action="<%= cat_url(@cat) %> " 
       class="button_to" 
       method="post">
-  <% if current_user.id == @cat.user_id %>
+
     <div>
       <input name="_method" type="hidden" value="delete">
+      
+      <input name="_method" type="hidden" value="delete">
+      <input type="hidden"
+              name="authenticity_token"
+              value="<%= form_authenticity_token %>">
+              
       <button type="submit" 
               class="btn btn-default btn-xs">
               <span class="glyphicon glyphicon-remove"></span>
@@ -18,8 +24,8 @@
         Edit
       </a>
     </div>
-  <% end %>
 </form>
+<% end %>
 
 <hr>
 
