--- a/app/views/cats/index.html.erb
+++ b/app/views/cats/index.html.erb
@@ -1,18 +1,25 @@
-<div class="col-md-4 col-md-offset-4">
+<div class="jumbotron">
+  <div class="container" style="margin-top:70px;">
+    <div class="col-md-6" style="padding-left:0px;">
+    	<h1 style="font-size:72px">View Your Cats</h1>
+      <br>
+      <a href="<%= new_cat_url %>"
+         class="btn btn-large btn-primary"
+         style="margin-top:-35px;">
+         <span class="glyphicon glyphicon-plus"></span>
+         Create a cat</a>
+    </div>
+  
+    <div class="col-md-4">
+      <select onchange="location = this.options[this.selectedIndex].value;"
+              class="form-control"
+              style="margin-top:50px;">
+        <option></option>
+    	  <% @your_cats.each do |cat| %>
+          <option value="<%= cat_url(cat) %>"><%= cat.name %></option>
+    	  <% end %>
+      </select>
 
-	<h1 class="text-center">All Your Cats</h1>
+    </div>
 
-	<div class="list-group" style="display:inline;">
-
-	  <% @your_cats.each do |cat| %>
-	  	<a href="<%= cat_url(cat) %>" class="list-group-item" >
-	  		<%= cat.name %>
-	  	</a>
-	  <% end %>
-
-	</div>
-
-
-	<%= link_to "Create a cat!", new_cat_url, 
-			class: "btn btn-large btn-primary col-md-offset-4" %>
-</div>
+  </div>
