--- a/app/views/cats/new.html.erb
+++ b/app/views/cats/new.html.erb
@@ -1,6 +1,6 @@
-
-
-<div class="col-md-4 col-md-offset-4">
-	<h1 class="text-center">Create a new cat!</h1>
-	<%= render "form" %>
-<div>
+<div class="container" style="margin-top:70px;">
+  <div class="col-md-4 col-md-offset-4">
+  	<h1 class="text-center">Create a new cat!</h1>
+  	<%= render "form" %>
+  <div>
+</div>
