--- a/app/views/cats/show.html.erb
+++ b/app/views/cats/show.html.erb
@@ -1,4 +1,5 @@
-<h1><%= @cat.name %></h1>
+<div class="container" style="margin-top:70px;">
+<h1 style="font-size:40px;">Cat: <%= @cat.name %></h1>
 <% if current_user.id == @cat.user_id %>
 <form action="<%= cat_url(@cat) %> " 
       class="button_to" 
@@ -121,4 +122,5 @@
   <% end %>
   
 </table>
+</h1>
 
