--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="navbar-header">
       <!-- navbar header is used to house the brand-->
-      <a class="navbar-brand" href="#">99 Cats</a>
+      <a class="navbar-brand" href="<%= cats_url %>">99 Cats</a>
     </div>
   <!-- container must wrap around element to use bootstrap's grid system, can use container-fluid to span whole thing-->
   
@@ -46,8 +46,20 @@
           <li><a href="<%= sessions_url %>">All signed in locations</a></li>
           <li><span>Welcome, <%= current_user.user_name %></span></li>
           <% session_found = Session.find_by(session_token: session[:session_token])%>
-          <li><%= button_to "Sign Out", session_url(session_found), method: :delete, class: "remove_button_css"%></li>
         </ul>
+          <form class="navbar-form navbar-right" 
+                role="form" 
+                action="<%= session_url(session_found) %>"
+                method="POST">
+            <input type="hidden"
+                   name="authenticity_token"
+                   value="<%= form_authenticity_token %>">
+            <input type="hidden"
+                   name="_method"
+                   value="DELETE">
+            <button type="submit" class="btn btn-primary">Sign out</button>
+          </form>
+
       <% end %>
       
     </div>
