--- a/app/views/cat_rental_requests/new.html.erb
+++ b/app/views/cat_rental_requests/new.html.erb
@@ -1,10 +1,12 @@
-
-<div class="col-md-4 col-md-offset-4">
+<div class="jumbotron">
+<div class="container" style="margin-top:70px;">
+<div class="col-md-8 col-md-offset-2"
+     style="margin-top:-50px;">
 <h1 class="text-center">Make a request for <%= @cat.name %></h1>
 
 <%= render 'shared/error' %>
-
-
+</div>
+<div class="col-md-6 col-md-offset-3">
 <form action="<%= cat_cat_rental_requests_url %>" method="POST">
       <input type="hidden"
              name="authenticity_token"
@@ -33,4 +35,6 @@
   
   <button type="submit" class="btn btn-primary btn-lg col-md-offset-3">Make the request!</button>
 </form>
+</div>
+</div>
 </div>
