--- a/app/views/cats/request_cats.html.erb
+++ b/app/views/cats/request_cats.html.erb
@@ -1,13 +1,20 @@
-<div class="col-md-4 col-md-offset-4">
+<div class="jumbotron">
+  <div class="container" style="margin-top:70px;">
+    <div class="col-md-6" style="padding-left:0px;">
+    	<h1 style="font-size:72px">Select a cat!</h1>
+      <br>
+    </div>
+  
+    <div class="col-md-4">
+      <select onchange="location = this.options[this.selectedIndex].value;"
+              class="form-control"
+              style="margin-top:50px;">
+        <option></option>
+    	  <% @other_cats.each do |cat| %>
+          <option value="<%= cat_url(cat) %>"><%= cat.name %></option>
+    	  <% end %>
+      </select>
 
-	<h1 class="text-center">Requestable cats</h1>
+    </div>
 
-	<div class="list-group" style="display:inline;">
-
-	  <% @other_cats.each do |cat| %>
-	    <%= link_to cat.name, cat_url(cat), class: "list-group-item" %>
-	  <% end %>
-
-	</div>
-
-</div>
+  </div>
