added some more css stuffs

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -6,5 +6,10 @@
       <br>
       Rent your cats out today!
     </p>
+    <p>
+      <a class="btn btn-primary btn-lg" 
+          href="<%= new_session_url %>" 
+          role="button">Back to Home »</a>
+    </p>
   </div>
 </div>
