--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -102,7 +102,8 @@ li.errors{
 }
 
 .jumbotron {
-  height: 500px;
+  height: 1000px;
+  margin-bottom:0;
 }
 .jumbotron .container {
   margin-top:80px;
