--- a/app/views/cats/edit.html.erb
+++ b/app/views/cats/edit.html.erb
@@ -1,6 +1,10 @@
-<div class="col-md-4 col-md-offset-4">
-
-	<h1 class="text-center">Edit a cat!</h1>
-	<%= render "form" %>
-
+<div class="jumbotron">
+  <div class="container" style="margin-top:70px">
+    <div class="col-md-6">
+    <h1 style="font-size:100px;">Edit a cat!</h1>
+  </div>
+    <div class="col-md-4 col-md-offset-1" style="margin-top:-20px;">
+    	<%= render "form" %>
+    </div>
+  </div>
 </div>
