--- a/app/views/cats/new.html.erb
+++ b/app/views/cats/new.html.erb
@@ -1,6 +1,10 @@
-<div class="container" style="margin-top:70px;">
-  <div class="col-md-4 col-md-offset-4">
-  	<h1 class="text-center">Create a new cat!</h1>
-  	<%= render "form" %>
-  <div>
+<div class="jumbotron">
+  <div class="container" style="margin-top:70px">
+    <div class="col-md-8">
+    <h1 style="font-size:100px;">Create a cat!</h1>
+  </div>
+    <div class="col-md-4" style="margin-top:-20px;">
+    	<%= render "form" %>
+    </div>
+  </div>
 </div>
